# awesome_notifications

./: pubspec.yaml
example/: pubspec.yaml
example/lib/: main.dart
example/lib/utils/: common_functions.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/src/: awesome_notifications_core.dart
windows/: CMakeLists.txt  Directory.Build.props  awesome_notifications_plugin.cpp  definitions.h
windows/include/awesome_notifications/: awesome_notifications_plugin.h
windows/notifications/: NotificationBuilder.cpp  NotificationBuilder.h  NotificationSender.cpp  NotificationSender.h
windows/notifications/enums/: ActionButtonType.cpp  ActionButtonType.h  DefaultRingtoneType.cpp  DefaultRingtoneType.h  GroupAlertBehaviour.cpp  GroupAlertBehaviour.h  GroupSort.cpp  GroupSort.h  MediaSource.h  NotificationCategory.cpp  NotificationCategory.h  NotificationImportance.cpp  NotificationImportance.h  NotificationLayout.cpp  NotificationLayout.h  NotificationLifeCycle.cpp  NotificationLifeCycle.h  NotificationPrivacy.cpp  NotificationPrivacy.h  NotificationSource.cpp  NotificationSource.h
windows/notifications/exceptions/: AwesomeNotificationException.h
windows/notifications/managers/: DefaultsManager.cpp  DefaultsManager.h  SharedManager.h
windows/notifications/models/: AbstractModel.cpp  AbstractModel.h  DefaultsModel.cpp  DefaultsModel.h  NotificationButtonModel.cpp  NotificationButtonModel.h  NotificationCalendarModel.cpp  NotificationCalendarModel.h  NotificationChannelGroupModel.cpp  NotificationChannelGroupModel.h  NotificationChannelModel.cpp  NotificationChannelModel.h  NotificationContentModel.cpp  NotificationContentModel.h  NotificationMessageModel.cpp  NotificationMessageModel.h  NotificationModel.cpp  NotificationModel.h  NotificationScheduleModel.cpp  NotificationScheduleModel.h
windows/notifications/models/returnedData/: ActionReceived.cpp  ActionReceived.h  NotificationReceived.cpp  NotificationReceived.h
windows/utils/: BitmapUtils.cpp  BitmapUtils.h  DateUtils.cpp  DateUtils.h  HtmlUtils.cpp  HtmlUtils.h  IntegerUtils.cpp  IntegerUtils.h  JsonUtils.cpp  JsonUtils.h  MapUtils.h  MediaUtils.cpp  MediaUtils.h  StringUtils.cpp  StringUtils.h
